# EDISON-ComfyUI

./: .dockerignore  .gitignore  AI_ENHANCEMENTS.md  ALL_IMPROVEMENTS_SUMMARY.md  API_RECOVERY.md  AUTO_REMEMBER.md  CANCELLATION_COMPLETE.md  CHATGPT_CLAUDE_PARITY_ANALYSIS.md  CONVERSATION_CONTEXT.md  CONVERSATION_FLOW.md  COPILOT_SPEC.md  DEPLOYMENT_SUMMARY.md  DEV_ENVIRONMENT.md  DOCKER_PERMISSIONS_HELP.md  DOWNLOAD_SOTA_MODELS.md  DUAL_SOURCE_KNOWLEDGE_LEARNING.md  Dockerfile  ENHANCED_FEATURES.md  EXTERNAL_DRIVE_SETUP.md  FIXES_APPLIED.md  GALLERY_AND_UPGRADES.md  IMPLEMENTATION_COMPLETE.md  IMPROVEMENT_5_COMPLETE.md  IMPROVEMENT_6_COMPLETE.md  IMPROVEMENT_7_COMPLETE.md  IMPROVEMENT_8_COMPLETE.md  IMPROVEMENT_9_COMPLETE.md  INSTALL.md  INTERNAL_HANDOFF_MAR_04_2026.md  KNOWLEDGE_LEARNING_COMPLETE.md  MODEL_DOWNLOAD_GUIDE.md  MODEL_SELECTION_COMPLETE.md  MYTHOS_INSPIRED_EDISON_IMPROVEMENTS.md  OAUTH_IMPLEMENTATION_SUMMARY.md  OAUTH_SETUP_GUIDE.md  OPENAI_COMPAT.md  OPENAI_QUICK_START.md  PHASE1_UPGRADES.md  PRINTING_CURA_HANDOFF.md  PROJECT_COMPLETION_SUMMARY.md  (+65 more)
.github/: DESCRIPTION.md  copilot-instructions.md  description.txt
chats/: 8cbca256-dc63-47f1-839d-9a87d184d003.json  user_mp3cvw02_v1rpesvzo.json  users.json
config/: edison.yaml  gpu_map.yaml  intent_labels.txt
docs/: AGENT_AND_SWARM_MODE.md  AWARENESS.md  COMFYUI_GPU_WORKERS.md  COMFYUI_WORKFLOWS.md  DEV_KB.md  FILES_AND_EDITING.md  GENERATIONS.md  GPU_FAN_CONTROL.md  GPU_MODEL_ORCHESTRATION.md  KNOWLEDGE_PACKS.md  MEMORY_MANAGEMENT.md  MODEL_LAB.md  NEW_SUBSYSTEMS.md  NODE_ARCHITECTURE.md  PLUGINS.md  (+8 more)
(+269 files in other folders)
